# rust-note2xero-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
