[package]
name = "noted2xero_cli"
version = "1.11.7"
authors = ["Philip Rodrigues <phil@phiroict.co.nz>"]
edition = "2018"
description = "The commandline utility NOTED to XERO conversion"
license = "GPL-2.0"
repository = "https://github.com/phiroict/rust-note2xero-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noted2xero_core = {path = "../noted2xero_core", version ="1.11.1"}
log = "0.4.17"
simple_logger = "2.1.0"
env_logger = "0.9.0"
csv = "1.1.6"
glob = "0.3.0"
chrono = "0.4.19"
tokio = "1.18.2"
