[package]
name = "noted2xero_cli"
version = "1.12.0"
authors = ["Philip Rodrigues <phil@phiroict.co.nz>"]
edition = "2021"
description = "The commandline utility NOTED to XERO conversion"
license = "GPL-2.0"
repository = "https://github.com/phiroict/rust-note2xero-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noted2xero_core = {path = "../noted2xero_core", version ="1.12.0"}
log = "0.4.19"
simple_logger = "4.2.0"
env_logger = "0.10.0"
csv = "1.2.2"
glob = "0.3.1"
chrono = "0.4.26"
tokio = "1.29.1"
